header order added

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <!-- section part added -->
             <div class="container pb-4">
                 <div class="row justify-content-start">
-                    <div class="ps-3 col-lg-6 order-lg-0 col-md-8 col-12 order-sm-0">
-                        <img src="images/Group 33092.png" class="w-100" height="" alt="">
+                    <div class="ps-3 col-lg-6 order-2 order-sm-2 order-md-1 col-md-8 col-12">
+                        <img class="pe-5 img-fluid" src="images/Group 33092.png" alt="">
                     </div>
-                    <div class="py-4 ps-3 col-lg-6 order-lg-1 col-md-4 col-12 order-sm-1">
+                    <div class="py-4 ps-5 col-lg-6 order-1 order-sm-1 order-md-2 col-md-4 col-12">
                         <h1 class="fw-bold text-uppercase">
                             <span style="color: #FA804C;">Nike React</span><br>
                             <span style="color:#363958;">Infinity Run 2</span>
