header section added

--- a/index.html
+++ b/index.html
@@ -245,6 +245,18 @@
     <!-- Main part ends from here -->
 
     <!-- Footer part start from here -->
+<footer class="container bg-dark p-3 rounded text-warning text-center">
+    <!-- Social icon part -->
+    <div class="fs-3 fw-bold nike-social-icon">
+        <a href=""><i class="fab fa-facebook"></i></a>
+        <a href=""><i class="fab fa-twitter"></i></a>
+        <a href=""><i class="fab fa-linkedin-in"></i></a>
+        <a href=""><i class="fab fa-github"></i></a>
+    </div>
+    <!-- copyright part -->
+    <p class="">&copy;Copyright By coder Rimon.</p>
+
+</footer>
     <!-- Footer part ends from here -->
 
 
