--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         
                 </div>
                 <!-- shopping section  -->
-                <div class="col-lg-6 order-1 col-md-6 order-sm-1 col-12 order-md-2 pt-5">
+                <div class="col-lg-6 order-1 col-md-6 order-sm-1 col-12 order-md-2 ps-5">
                     <img src="icons/XMLID 1.png" class="w-75 img-fluid" alt="">
                 </div>
             </div>
